...
        android:layout_height="match_parent"
        android:background="?attr/colorSurface"
        android:orientation="vertical"
        tools:context=".ui.fragments.coins.details.CoinDetailsFragment">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/coin_details_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
...
